@startuml

title __RESULTS's Class Diagram__\n

  package  {
    package com.anniefraz.dissertation.experiments {
      package com.anniefraz.dissertation.experiments.results {
        class ResultBS {
            - opacitorMeasurement1 : double
            - OpacitorMeasurement2 : double
            - array : int[]
            - seed : int
            - arraySize : int
            - currentRep : int
            - ResultBS()
            + getBsType()
            + getOpacitorMeasurement1()
            + getOpacitorMeasurement2()
            + getArray()
            + getSeed()
            + getArraySize()
            + getCurrentRep()
            + toString()
            {static} + getBuilder()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.experiments {
      package com.anniefraz.dissertation.experiments.results {
        class ResultBSBuilder {
            - opacitorMeasurement1 : double
            - OpacitorMeasurement2 : double
            - array : int[]
            - seed : int
            - arraySize : int
            - currentRep : int
            + setBsType()
            + setOpacitorMeasurement1()
            + setOpacitorMeasurement2()
            + setArray()
            + setSeed()
            + setArraySize()
            + setCurrentRep()
            + build()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.experiments {
      package com.anniefraz.dissertation.experiments.results {
        class ResultBSFileWriter {
            - csvWriter : CSVWriter
            + ResultBSFileWriter()
            + writeResult()
            + close()
        }
      }
    }
  }
  

  package  {
    package com.anniefraz.dissertation.experiments {
      package com.anniefraz.dissertation.experiments.results {
        interface ResultBSWriter {
            {abstract} + writeResult()
        }
      }
    }
  }
  

  ResultBS o-- BSType : bsType
  ResultBS +-down- ResultBSBuilder
  ResultBSBuilder o-- BSType : bsType
  ResultBSFileWriter -up-|> ResultBSWriter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
